--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="comp" src="techcrunch.png" alt="tc-logo">
+    <img class="comp" src="TechCrunch.png" alt="tc-logo">
     <img class="comp" src="tnw.png" alt="tnw-logo">
     <img class="comp" src="bizinsider.png" alt="biz-insider-logo">
     <img class="comp" src="mashable.png" alt="mashable-logo">
